# ADMamba

./: .gitignore  CITATION.cff  README.md  README_zh.md  pyproject.toml  requirements.txt
.cursor/plans/: ad_mamba_repo_cleanup_e7f93b15.plan.md  admamba_env_reproduce_26554f23.plan.md  admamba_oss_polish_3f5daa97.plan.md
ablations/: ad_mamba_4dir.py  ad_mamba_8dir.py  ad_mamba_baseline.py  ad_mamba_fdg_step.py
admamba/: __init__.py
admamba/datasets/: __init__.py  vaihingen_dataset.py
admamba/losses/: __init__.py  dice.py
admamba/models/: __init__.py  ad_mamba.py
analysis/: analyze_cosine_similarity.py  analyze_direction_activation.py  analyze_expert_direction.py  plot_cosine_bar.py  plot_final_figures.py  plot_ideal_and_spatial.py
configs/potsdam/: ad_mamba.py  dcswin.py  ftunetformer.py  unetformer.py
configs/vaihingen/: ad_mamba.py  ad_mamba_topk1.py  ad_mamba_topk2.py  ad_mamba_topk3.py  dcswin.py  ftunetformer.py  unetformer.py
docs/: AD_MAMBA_SCAN_IMPROVEMENTS.md  BENCHMARK_USAGE.md  benchmark_comparison.md
scripts/: benchmark_ablation.py  benchmark_model.py  inference_huge_image.py  test_potsdam.py  test_vaihingen.py  train.py
tools/: utils.py  vaihingen_dsm_split.py
